fixing image vertical alignment

--- a/MMM-HH-LocalTransport.css
+++ b/MMM-HH-LocalTransport.css
@@ -34,6 +34,10 @@
     width: 1px;
 }
 
+.hvvline img {
+    vertical-align: middle;
+}
+
 .hvvdestination {
     padding-left: 10px;
     text-align: left;
